got the batch nodes to work and removed the OR node type